--- a/ex1.ipynb
+++ b/ex1.ipynb
@@ -25,66 +25,102 @@
     }
    ],
    "source": [
+    "# ex1.ipynb (as .py script for compatibility)\n",
+    "\n",
+    "# 匯入必要套件\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import classification_report\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score, accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score,\n",
+    "    f1_score, classification_report, silhouette_score\n",
+    ")\n",
     "import kagglehub\n",
     "\n",
-    "# general setting. do not change TEST_SIZE\n",
+    "# 一般設定\n",
     "RANDOM_SEED = 42\n",
     "TEST_SIZE = 0.3\n",
-    "# load dataset（from kagglehub）\n",
-    "path = kagglehub.dataset_download(\"mlg-ulb/creditcardfraud\")\n",
     "\n",
+    "# 下載並載入資料集\n",
+    "path = kagglehub.dataset_download(\"mlg-ulb/creditcardfraud\")\n",
     "data = pd.read_csv(f\"{path}/creditcard.csv\")\n",
     "data['Class'] = data['Class'].astype(int)\n",
     "\n",
-    "# prepare data\n",
+    "# 資料預處理\n",
     "data = data.drop(['Time'], axis=1)\n",
     "data['Amount'] = StandardScaler().fit_transform(data['Amount'].values.reshape(-1, 1))\n",
-    "# 只取前 10000 筆資料（或視情況更少）\n",
-    "data = data.sample(n=10000, random_state=42)\n",
     "\n",
+    "# 顯示詐騙/正常資料比例\n",
     "fraud = data[data['Class'] == 1]\n",
     "nonfraud = data[data['Class'] == 0]\n",
-    "print(f'Fraudulent:{len(fraud)}, non-fraudulent:{len(nonfraud)}')\n",
-    "print(f'the positive class (frauds) percentage: {len(fraud)}/{len(fraud) + len(nonfraud)} ({len(fraud)/(len(fraud) + len(nonfraud))*100:.3f}%)')    \n",
+    "print(f\"Fraudulent: {len(fraud)}, Non-fraudulent: {len(nonfraud)}\")\n",
+    "print(f\"Positive class ratio: {len(fraud)/(len(fraud)+len(nonfraud))*100:.3f}%\")\n",
     "\n",
-    "X = np.asarray(data.iloc[:, ~data.columns.isin(['Class'])])\n",
-    "Y = np.asarray(data.iloc[:, data.columns == 'Class'])\n",
-    "\n",
-    "# split training set and data set\n",
+    "# 有監督學習 - Random Forest\n",
+    "X = np.asarray(data.drop(columns=['Class']))\n",
+    "Y = np.asarray(data['Class'])\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED)\n",
     "\n",
-    "# build Random Forest model\n",
     "rf_model = RandomForestClassifier(n_estimators=100, random_state=RANDOM_SEED)\n",
-    "rf_model.fit(X_train, y_train.ravel())\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
     "\n",
-    "# define evaluation function\n",
-    "def evaluation(y_true, y_pred, model_name=\"Model\"):\n",
-    "    accuracy = accuracy_score(y_true, y_pred)\n",
-    "    precision = precision_score(y_true, y_pred)\n",
-    "    recall = recall_score(y_true, y_pred)\n",
-    "    f1 = f1_score(y_true, y_pred)\n",
+    "def evaluate(y_true, y_pred, model_name):\n",
+    "    print(f\"\\n{model_name} Evaluation\")\n",
+    "    print(\"=\" * 45)\n",
+    "    print(\"Accuracy:\", accuracy_score(y_true, y_pred))\n",
+    "    print(\"Precision:\", precision_score(y_true, y_pred))\n",
+    "    print(\"Recall:\", recall_score(y_true, y_pred))\n",
+    "    print(\"F1 Score:\", f1_score(y_true, y_pred))\n",
+    "    print(\"\\nClassification Report:\\n\", classification_report(y_true, y_pred))\n",
     "\n",
-    "    print(f'\\n{model_name} Evaluation:')\n",
-    "    print('===' * 15)\n",
-    "    print('         Accuracy:', accuracy)\n",
-    "    print('  Precision Score:', precision)\n",
-    "    print('     Recall Score:', recall)\n",
-    "    print('         F1 Score:', f1)\n",
-    "    print(\"\\nClassification Report:\")\n",
-    "    print(classification_report(y_true, y_pred))\n",
+    "evaluate(y_test, y_pred_rf, \"Random Forest\")\n",
     "\n",
-    "# predict and print result\n",
-    "y_pred = rf_model.predict(X_test)\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "\n"
+    "# 非監督學習 - KMeans\n",
+    "X_unsup = np.asarray(data.drop(columns=['Class']))\n",
+    "y_unsup = np.asarray(data['Class'])\n",
+    "\n",
+    "x_train_unsup, x_test_unsup, y_train_unsup, y_test_unsup = train_test_split(\n",
+    "    X_unsup, y_unsup, test_size=TEST_SIZE, random_state=RANDOM_SEED, stratify=y_unsup)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "x_train_unsup = scaler.fit_transform(x_train_unsup)\n",
+    "x_test_unsup = scaler.transform(x_test_unsup)\n",
+    "\n",
+    "# 取 1000 筆非詐騙樣本作為 KMeans 訓練資料\n",
+    "n_x_train = x_train_unsup[y_train_unsup == 0][:1000]\n",
+    "\n",
+    "# 決定最佳 K\n",
+    "scores = []\n",
+    "for k in range(2, 5):\n",
+    "    kmeans = KMeans(n_clusters=k, random_state=RANDOM_SEED)\n",
+    "    kmeans.fit(n_x_train)\n",
+    "    score = silhouette_score(n_x_train, kmeans.labels_)\n",
+    "    scores.append(score)\n",
+    "\n",
+    "optimal_k = np.argmax(scores) + 2\n",
+    "kmeans = KMeans(n_clusters=optimal_k, random_state=RANDOM_SEED)\n",
+    "kmeans.fit(n_x_train)\n",
+    "\n",
+    "# 在測試集上預測\n",
+    "y_pred_kmeans = kmeans.predict(x_test_unsup)\n",
+    "\n",
+    "# 對齊 KMeans 標籤與實際標籤\n",
+    "def align_labels(y_true, y_pred, n_clusters):\n",
+    "    aligned = np.zeros_like(y_pred)\n",
+    "    for i in range(n_clusters):\n",
+    "        mask = (y_pred == i)\n",
+    "        if np.sum(mask) > 0:\n",
+    "            aligned[mask] = np.bincount(y_true[mask]).argmax()\n",
+    "        else:\n",
+    "            aligned[mask] = 0\n",
+    "    return aligned\n",
+    "\n",
+    "y_pred_kmeans_aligned = align_labels(y_test_unsup, y_pred_kmeans, optimal_k)\n",
+    "evaluate(y_test_unsup, y_pred_kmeans_aligned, f\"KMeans (k={optimal_k})\")\n"
    ]
   },
   {
