--- a/acs111126_ex2/ex2.ipynb
+++ b/acs111126_ex2/ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3d735aa1",
    "metadata": {},
    "outputs": [
@@ -10,60 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in f:\\ntcuml\\.conda\\lib\\site-packages (2.2.5)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: pandas in f:\\ntcuml\\.conda\\lib\\site-packages (2.2.3)\n",
-      "Requirement already satisfied: numpy>=1.23.2 in f:\\ntcuml\\.conda\\lib\\site-packages (from pandas) (2.2.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in f:\\ntcuml\\.conda\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in f:\\ntcuml\\.conda\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in f:\\ntcuml\\.conda\\lib\\site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: six>=1.5 in f:\\ntcuml\\.conda\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: scikit-learn in f:\\ntcuml\\.conda\\lib\\site-packages (1.6.1)\n",
-      "Requirement already satisfied: numpy>=1.19.5 in f:\\ntcuml\\.conda\\lib\\site-packages (from scikit-learn) (2.2.5)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in f:\\ntcuml\\.conda\\lib\\site-packages (from scikit-learn) (1.15.3)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in f:\\ntcuml\\.conda\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in f:\\ntcuml\\.conda\\lib\\site-packages (from scikit-learn) (3.5.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: kagglehub in f:\\ntcuml\\.conda\\lib\\site-packages (0.3.12)\n",
-      "Requirement already satisfied: packaging in f:\\ntcuml\\.conda\\lib\\site-packages (from kagglehub) (24.2)\n",
-      "Requirement already satisfied: pyyaml in f:\\ntcuml\\.conda\\lib\\site-packages (from kagglehub) (6.0.2)\n",
-      "Requirement already satisfied: requests in f:\\ntcuml\\.conda\\lib\\site-packages (from kagglehub) (2.32.3)\n",
-      "Requirement already satisfied: tqdm in f:\\ntcuml\\.conda\\lib\\site-packages (from kagglehub) (4.67.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in f:\\ntcuml\\.conda\\lib\\site-packages (from requests->kagglehub) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in f:\\ntcuml\\.conda\\lib\\site-packages (from requests->kagglehub) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in f:\\ntcuml\\.conda\\lib\\site-packages (from requests->kagglehub) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in f:\\ntcuml\\.conda\\lib\\site-packages (from requests->kagglehub) (2025.4.26)\n",
-      "Requirement already satisfied: colorama in f:\\ntcuml\\.conda\\lib\\site-packages (from tqdm->kagglehub) (0.4.6)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: kagglehub in f:\\ntcuml\\.conda\\lib\\site-packages (0.3.12)\n",
-      "Requirement already satisfied: packaging in f:\\ntcuml\\.conda\\lib\\site-packages (from kagglehub) (24.2)\n",
-      "Requirement already satisfied: pyyaml in f:\\ntcuml\\.conda\\lib\\site-packages (from kagglehub) (6.0.2)\n",
-      "Requirement already satisfied: requests in f:\\ntcuml\\.conda\\lib\\site-packages (from kagglehub) (2.32.3)\n",
-      "Requirement already satisfied: tqdm in f:\\ntcuml\\.conda\\lib\\site-packages (from kagglehub) (4.67.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in f:\\ntcuml\\.conda\\lib\\site-packages (from requests->kagglehub) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in f:\\ntcuml\\.conda\\lib\\site-packages (from requests->kagglehub) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in f:\\ntcuml\\.conda\\lib\\site-packages (from requests->kagglehub) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in f:\\ntcuml\\.conda\\lib\\site-packages (from requests->kagglehub) (2025.4.26)\n",
-      "Requirement already satisfied: colorama in f:\\ntcuml\\.conda\\lib\\site-packages (from tqdm->kagglehub) (0.4.6)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: xgboost in f:\\ntcuml\\.conda\\lib\\site-packages (3.0.1)\n",
-      "Requirement already satisfied: numpy in f:\\ntcuml\\.conda\\lib\\site-packages (from xgboost) (2.2.5)\n",
-      "Requirement already satisfied: scipy in f:\\ntcuml\\.conda\\lib\\site-packages (from xgboost) (1.15.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
       "Fraudulent:492, non-fraudulent:284315\n",
       "the positive class (frauds) percentage: 492/284807 (0.173%)\n"
      ]
     }
    ],
    "source": [
-    "%pip install numpy\n",
-    "%pip install pandas\n",
-    "%pip install scikit-learn\n",
-    "%pip install kagglehub\n",
-    "%pip install --upgrade kagglehub\n",
-    "%pip install xgboost\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -71,6 +23,7 @@
     "from sklearn.metrics import classification_report\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.metrics import silhouette_score, accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import IsolationForest\n",
     "import kagglehub\n",
     "# same as ex1\n",
@@ -90,25 +43,18 @@
     "fraud = data[data['Class'] == 1]\n",
     "nonfraud = data[data['Class'] == 0]\n",
     "print(f'Fraudulent:{len(fraud)}, non-fraudulent:{len(nonfraud)}')\n",
-    "print(f'the positive class (frauds) percentage: {len(fraud)}/{len(fraud) + len(nonfraud)} ({len(fraud)/(len(fraud) + len(nonfraud))*100:.3f}%)')    \n"
+    "print(f'the positive class (frauds) percentage: {len(fraud)}/{len(fraud) + len(nonfraud)} ({len(fraud)/(len(fraud) + len(nonfraud))*100:.3f}%)')    \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a01041",
+   "id": "9475f073",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "f:\\ntcuml\\.conda\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [23:25:45] WARNING: D:\\bld\\xgboost-split_1748169168709\\work\\src\\learner.cc:738: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -116,16 +62,16 @@
       "\n",
       "isolation+XGBoost Evaluation:\n",
       "=============================================\n",
-      "         Accuracy: 0.9996957035684608\n",
-      "  Precision Score: 0.9508196721311475\n",
-      "     Recall Score: 0.8529411764705882\n",
-      "         F1 Score: 0.8992248062015504\n",
+      "         Accuracy: 0.9997074072773662\n",
+      "  Precision Score: 0.9512195121951219\n",
+      "     Recall Score: 0.8602941176470589\n",
+      "         F1 Score: 0.9034749034749034\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     85307\n",
-      "           1       0.95      0.85      0.90       136\n",
+      "           1       0.95      0.86      0.90       136\n",
       "\n",
       "    accuracy                           1.00     85443\n",
       "   macro avg       0.98      0.93      0.95     85443\n",
@@ -135,41 +81,25 @@
     }
    ],
    "source": [
-    "\n",
     "X = np.asarray(data.iloc[:, ~data.columns.isin(['Class'])])\n",
     "Y = np.asarray(data.iloc[:, data.columns == 'Class'])\n",
     "\n",
     "# split training set and data set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED)\n",
     "\n",
-    "#scaler = StandardScaler()\n",
-    "#x_train = scaler.fit_transform(x_train)\n",
-    "#x_test = scaler.transform(x_test)\n",
-    "\n",
-    "#isoation forest\n",
-    "#https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.IsolationForest.html\n",
-    "iso_forest = IsolationForest(contamination=0.0017, random_state=RANDOM_SEED)\n",
+    "iso_forest = IsolationForest(random_state=RANDOM_SEED, contamination=0.016)\n",
     "iso_forest.fit(X_train)\n",
     "\n",
     "#xgb model\n",
-    "#https://xgboost.readthedocs.io/en/latest/python/python_api.html ik i just linked the official doc, but it's the first one i saw and if you scroll down there is paramaters\n",
-    "\n",
     "xgb_model = XGBClassifier(\n",
-    "    colsample_bytree=1.0,\n",
-    "    learning_rate=0.1,\n",
     "    max_depth=6,\n",
-    "    n_estimators=100,\n",
+    "    n_estimators=120,\n",
+    "    learning_rate=0.1,\n",
     "    subsample=0.8,\n",
     "    scale_pos_weight=2.5,\n",
-    "    eval_metric='logloss',\n",
-    "    tree_method='hist',\n",
     "    random_state=RANDOM_SEED\n",
     ")\n",
-    "xgb_model.fit(\n",
-    "    X_train, y_train,\n",
-    "    verbose = False,\n",
-    "    eval_set=[(X_train, y_train), (X_test, y_test)],\n",
-    ")\n",
+    "xgb_model.fit(X_train, y_train)\n",
     "\n",
     "# same as ex1\n",
     "def evaluation(y_true, y_pred, model_name=\"Model\"):\n",
@@ -188,8 +118,7 @@
     "   print(classification_report(y_true, y_pred))\n",
     "\n",
     "y_pred = xgb_model.predict(X_test)\n",
-    "evaluation(y_test, y_pred, model_name=\"isolation+XGBoost\")\n",
-    "#did i use AI(llm)? yes. Why? i installed kagglehub 4 times on my machine ICANT  also they are not helpful, just looking at the example code is better than using llm(s) to get the answer, unless with sufficent prompt engi."
+    "evaluation(y_test, y_pred, model_name=\"isolation+XGBoost\")"
    ]
   }
  ],
