--- a/ex2.ipynb
+++ b/ex2.ipynb
@@ -179,9 +179,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SP1_XWDMDHiZ",
-        "outputId": "305be3dd-06fb-4272-880d-eb256acc13ba"
+        "outputId": "96e58ffc-e866-4cee-8965-c6618d6d168b"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,34 +207,7 @@
             "   macro avg       0.99      0.87      0.92     85443\n",
             "weighted avg       1.00      1.00      1.00     85443\n",
             "\n",
-            "ROC-AUC: 0.9717\n",
-            "\n",
-            "XGBoost Baseline Evaluation:\n",
-            "=============================================\n",
-            "         Accuracy: 0.9983263696265346\n",
-            "  Precision Score: 0.5102880658436214\n",
-            "     Recall Score: 0.8378378378378378\n",
-            "         F1 Score: 0.6342710997442456\n",
-            "\n",
-            "Classification Report:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       1.00      1.00      1.00     85295\n",
-            "           1       0.51      0.84      0.63       148\n",
-            "\n",
-            "    accuracy                           1.00     85443\n",
-            "   macro avg       0.76      0.92      0.82     85443\n",
-            "weighted avg       1.00      1.00      1.00     85443\n",
-            "\n",
-            "ROC-AUC: 0.9652\n",
-            "\n",
-            "============================================================\n",
-            "FINAL COMPARISON\n",
-            "============================================================\n",
-            "Model                     Accuracy   Precision  Recall     F1         ROC-AUC   \n",
-            "------------------------------------------------------------\n",
-            "Multi-Hybrid              0.9995     0.9732     0.7365     0.8385     0.9717    \n",
-            "XGBoost Baseline          0.9983     0.5103     0.8378     0.6343     0.9652    \n"
+            "ROC-AUC: 0.9717\n"
           ]
         }
       ]
