--- a/ex2/ex2.ipynb
+++ b/ex2/ex2.ipynb
@@ -21,6 +21,7 @@
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.semi_supervised import LabelSpreading\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.cluster import KMeans\n",
         "from sklearn.metrics import classification_report, accuracy_score, precision_score, recall_score, f1_score\n",
@@ -52,22 +53,28 @@
         "y = np.asarray(data['Class'])\n",
         "\n",
         "# Split data\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=TEST_SIZE, random_state=RANDOM_SEED, stratify=y)\n",
-        "# Scale features\n",
-        "scaler = StandardScaler()\n",
-        "X_train_scaled = scaler.fit_transform(X_train)\n",
-        "X_test_scaled = scaler.transform(X_test)\n",
-        "# Split data\n",
-        "smote = SMOTE(random_state=RANDOM_SEED)\n",
-        "X_train_res, y_train_res = smote.fit_resample(X_train_scaled, y_train.ravel())\n",
-        "\n",
-        "rf = RandomForestClassifier(n_estimators=200, max_depth=10, min_samples_leaf=5, class_weight='balanced', random_state=RANDOM_SEED)\n",
-        "rf.fit(X_train_res, y_train_res)\n",
-        "\n",
-        "y_probs = rf.predict_proba(X_test_scaled)[:, 1]\n",
-        "\n",
-        "best_threshold = 0.663\n",
-        "y_pred = (y_probs >= best_threshold).astype(int)\n",
+        "X_train_full, X_test, y_train_full, y_test = train_test_split(X, y, test_size=TEST_SIZE, random_state=RANDOM_SEED, stratify=y)\n",
+        "fraud_idx = np.where(y_train_full == 1)[0]\n",
+        "nonfraud_idx = np.where(y_train_full == 0)[0]\n",
+        "n_labeled_normals = 500\n",
+        "np.random.seed(RANDOM_SEED)\n",
+        "labeled_normals_idx = np.random.choice(nonfraud_idx, size=n_labeled_normals, replace=False)\n",
+        "labeled_idx = np.concatenate([fraud_idx, labeled_normals_idx])\n",
+        "unlabeled_idx = np.setdiff1d(nonfraud_idx, labeled_normals_idx)\n",
+        "y_semi = np.full_like(y_train_full, -1)\n",
+        "y_semi[labeled_idx] = y_train_full[labeled_idx]\n",
+        "ls_model = LabelSpreading(kernel='knn', n_neighbors=10, alpha=0.1)\n",
+        "ls_model.fit(X_train_full, y_semi)\n",
+        "label_distributions = ls_model.label_distributions_\n",
+        "confidence = label_distributions.max(axis=1)\n",
+        "high_confidence_mask = confidence >= 0.9\n",
+        "X_filtered = X_train_full[high_confidence_mask]\n",
+        "y_filtered = ls_model.transduction_[high_confidence_mask]\n",
+        "rf = RandomForestClassifier(class_weight='balanced', random_state=RANDOM_SEED)\n",
+        "rf.fit(X_filtered, y_filtered)\n",
+        "y_proba = rf.predict_proba(X_test_scaled)[:, 1]\n",
+        "threshold = 0.8\n",
+        "y_pred = (y_proba > threshold).astype(int)\n",
         "\n",
         "# Define evaluation function\n",
         "def evaluation(y_true, y_pred, model_name=\"Model\"):\n",
@@ -91,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSJh4rrCiAyn",
-        "outputId": "b846a94e-d031-4734-da31-3513f46680ca"
+        "outputId": "fa6344ad-c2c6-40d2-c23f-3c20310387ea"
       },
-      "execution_count": 23,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,19 +111,19 @@
             "\n",
             "Model Evaluation:\n",
             "=============================================\n",
-            "         Accuracy: 0.9989700736163291\n",
-            "  Precision Score: 0.6724137931034483\n",
-            "     Recall Score: 0.7905405405405406\n",
-            "         F1 Score: 0.7267080745341615\n",
+            "         Accuracy: 0.9987594068560327\n",
+            "  Precision Score: 0.7058823529411765\n",
+            "     Recall Score: 0.4864864864864865\n",
+            "         F1 Score: 0.576\n",
             "\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       1.00      1.00      1.00     85295\n",
-            "           1       0.67      0.79      0.73       148\n",
+            "           1       0.71      0.49      0.58       148\n",
             "\n",
             "    accuracy                           1.00     85443\n",
-            "   macro avg       0.84      0.89      0.86     85443\n",
+            "   macro avg       0.85      0.74      0.79     85443\n",
             "weighted avg       1.00      1.00      1.00     85443\n",
             "\n"
           ]
