--- a/ex01.md
+++ b/ex01.md
@@ -1,20 +1,22 @@
-信用卡詐欺檢測報告
+# 信用卡詐欺檢測報告
 
-1.監督式
-使用XGBoost
-參數：
-n_estimators=600
-max_depth=8
-learning_rate=0.1
-scale_pos_weight=8
-random_state=42
-eval_metric='logloss'
-調高 n_estimators 與 max_depth，加大 scale_pos_weight 以處理嚴重不平衡
+## 1. 監督式學習：XGBoost
 
-範例
+**參數設定**  
+- `n_estimators=600`  
+- `max_depth=8`  
+- `learning_rate=0.1`  
+- `scale_pos_weight=8`  
+- `random_state=42`  
+- `eval_metric='logloss'`  
 
+> 調高 `n_estimators` 與 `max_depth`，並加大 `scale_pos_weight` 以處理嚴重不平衡問題。
+
+### 範例結果
+
+```
 Random Forest Evaluation:
-==========================
+--------------------------------------------
 Accuracy       : 0.99963719
 Precision Score: 0.94117647
 Recall Score   : 0.82352941
@@ -29,14 +31,14 @@ Classification Report:
     accuracy                           1.00     85443
    macro avg       0.97      0.91      0.94     85443
 weighted avg       1.00      1.00      1.00     85443
-==========================
+--------------------------------------------
+```
 
+### 實作結果
 
-實作
-
-
+```
 XGBoost Evaluation:
-==========================
+--------------------------------------------
 Accuracy       : 0.99969570
 Precision Score: 0.94354839
 Recall Score   : 0.86029412
@@ -51,16 +53,20 @@ Classification Report:
     accuracy                           1.00     85443
    macro avg       0.97      0.93      0.95     85443
 weighted avg       1.00      1.00      1.00     85443
-==========================
+--------------------------------------------
+```
 
-2.非監督式
-對KMeans進行改動：
-原本只用正常樣本訓練，改成取 800 筆正常樣本和 200 筆詐騙樣本共同訓練
+---
 
-範例
+## 2. 非監督式學習：KMeans
 
+> **改動**：原本只用正常樣本訓練，改成取 800 筆正常樣本與 200 筆詐騙樣本共同訓練。
+
+### 範例結果
+
+```
 KMeans (Unsupervised) Evaluation:
-==========================
+--------------------------------------------
 Accuracy       : 0.99872430
 Precision Score: 0.78260870
 Recall Score   : 0.36486486
@@ -75,12 +81,14 @@ Classification Report:
     accuracy                           1.00     85443
    macro avg       0.89      0.68      0.75     85443
 weighted avg       1.00      1.00      1.00     85443
-==========================
+--------------------------------------------
+```
 
-實作
+### 實作結果
 
+```
 MY KMeans Evaluation:
-==========================
+--------------------------------------------
 Accuracy       : 0.99897007
 Precision Score: 0.83333333
 Recall Score   : 0.50675676
@@ -95,4 +103,5 @@ Classification Report:
     accuracy                           1.00     85443
    macro avg       0.92      0.75      0.81     85443
 weighted avg       1.00      1.00      1.00     85443
-==========================
+--------------------------------------------
+```
